Feat: Fix Enum Sub Plan, Add Api Get Sub Plan By Target Type